--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {},
   "devDependencies": {
     "@nrwl/cli": "13.8.4",
+    "@nrwl/nest": "13.8.4",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/tao": "13.8.4",
     "@nrwl/workspace": "13.8.4",
