--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
   },
   "private": true,
   "dependencies": {
-    "@nestjs/common": "^8.4.0",
-    "@nestjs/core": "^8.4.0",
-    "@nestjs/platform-express": "^8.4.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.5.4",
-    "tslib": "^2.3.1"
+    "@nestjs/common": "~8.4.0",
+    "@nestjs/core": "~8.4.0",
+    "@nestjs/platform-express": "~8.4.0",
+    "reflect-metadata": "~0.1.13",
+    "rxjs": "~7.5.4",
+    "tslib": "~2.3.1"
   },
   "devDependencies": {
-    "@nestjs/schematics": "^8.0.7",
-    "@nestjs/testing": "^8.4.0",
+    "@nestjs/schematics": "~8.0.7",
+    "@nestjs/testing": "~8.4.0",
     "@nrwl/cli": "13.8.4",
     "@nrwl/eslint-plugin-nx": "13.8.4",
     "@nrwl/jest": "13.8.4",
@@ -35,7 +35,7 @@
     "eslint": "~8.10.0",
     "eslint-config-prettier": "8.5.0",
     "jest": "27.5.1",
-    "prettier": "^2.5.1",
+    "prettier": "~2.5.1",
     "ts-jest": "27.1.3",
     "typescript": "~4.5.2"
   }
