--- a/package.json
+++ b/package.json
@@ -9,11 +9,28 @@
   },
   "private": true,
   "dependencies": {
+    "@automapper/classes": "7.3.14",
+    "@automapper/core": "7.3.14",
+    "@automapper/mikro": "7.3.14",
+    "@automapper/nestjs": "7.3.14",
+    "@mikro-orm/core": "5.0.5",
+    "@mikro-orm/mongodb": "5.0.5",
+    "@mikro-orm/nestjs": "5.0.0",
     "@nestjs/common": "~8.4.0",
+    "@nestjs/config": "1.2.0",
     "@nestjs/core": "~8.4.0",
+    "@nestjs/jwt": "8.0.0",
+    "@nestjs/passport": "8.2.1",
     "@nestjs/platform-express": "~8.4.0",
+    "@nestjs/swagger": "5.2.0",
+    "bcrypt": "5.0.1",
+    "compression": "1.7.4",
+    "helmet": "5.0.2",
+    "passport": "0.5.2",
+    "passport-jwt": "4.0.0",
     "reflect-metadata": "~0.1.13",
     "rxjs": "~7.5.4",
+    "swagger-ui-express": "4.3.0",
     "tslib": "~2.3.1"
   },
   "devDependencies": {
@@ -28,8 +45,10 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/tao": "13.8.4",
     "@nrwl/workspace": "13.8.4",
+    "@types/bcrypt": "5.0.0",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
+    "@types/passport-jwt": "3.0.6",
     "@typescript-eslint/eslint-plugin": "~5.13.0",
     "@typescript-eslint/parser": "~5.13.0",
     "eslint": "~8.10.0",
