--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@automapper/nestjs": "7.3.14",
     "@mikro-orm/core": "5.0.5",
     "@mikro-orm/mongodb": "5.0.5",
-    "@mikro-orm/nestjs": "5.0.0",
+    "@mikro-orm/nestjs": "5.0.1",
     "@nestjs/common": "~8.4.0",
     "@nestjs/config": "1.2.0",
     "@nestjs/core": "~8.4.0",
@@ -29,30 +29,30 @@
     "passport": "0.5.2",
     "passport-jwt": "4.0.0",
     "reflect-metadata": "~0.1.13",
-    "rxjs": "~7.5.4",
+    "rxjs": "~7.5.5",
     "swagger-ui-express": "4.3.0",
     "tslib": "~2.3.1"
   },
   "devDependencies": {
-    "@nestjs/schematics": "~8.0.7",
+    "@nestjs/schematics": "~8.0.8",
     "@nestjs/testing": "~8.4.0",
-    "@nrwl/cli": "13.8.4",
-    "@nrwl/eslint-plugin-nx": "13.8.4",
-    "@nrwl/jest": "13.8.4",
-    "@nrwl/js": "13.8.4",
-    "@nrwl/linter": "13.8.4",
-    "@nrwl/nest": "13.8.4",
-    "@nrwl/node": "13.8.4",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/tao": "13.8.4",
-    "@nrwl/workspace": "13.8.4",
+    "@nrwl/cli": "13.8.8",
+    "@nrwl/eslint-plugin-nx": "13.8.8",
+    "@nrwl/jest": "13.8.8",
+    "@nrwl/js": "13.8.8",
+    "@nrwl/linter": "13.8.8",
+    "@nrwl/nest": "13.8.8",
+    "@nrwl/node": "13.8.8",
+    "@nrwl/nx-cloud": "13.1.6",
+    "@nrwl/tao": "13.8.8",
+    "@nrwl/workspace": "13.8.8",
     "@types/bcrypt": "5.0.0",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "@types/passport-jwt": "3.0.6",
-    "@typescript-eslint/eslint-plugin": "~5.13.0",
-    "@typescript-eslint/parser": "~5.13.0",
-    "eslint": "~8.10.0",
+    "@typescript-eslint/eslint-plugin": "~5.14.0",
+    "@typescript-eslint/parser": "~5.14.0",
+    "eslint": "~8.11.0",
     "eslint-config-prettier": "8.5.0",
     "jest": "27.5.1",
     "prettier": "~2.5.1",
