--- a/package.json
+++ b/package.json
@@ -5,10 +5,19 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "postinstall": "ngcc --properties es2015 browser module main"
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "~13.2.0",
+    "@angular/common": "~13.2.0",
+    "@angular/compiler": "~13.2.0",
+    "@angular/core": "~13.2.0",
+    "@angular/forms": "~13.2.0",
+    "@angular/platform-browser": "~13.2.0",
+    "@angular/platform-browser-dynamic": "~13.2.0",
+    "@angular/router": "~13.2.0",
     "@automapper/classes": "7.3.14",
     "@automapper/core": "7.3.14",
     "@automapper/mikro": "7.3.14",
@@ -31,11 +40,20 @@
     "reflect-metadata": "~0.1.13",
     "rxjs": "~7.5.5",
     "swagger-ui-express": "4.3.0",
-    "tslib": "~2.3.1"
+    "tslib": "~2.3.1",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~13.2.0",
+    "@angular-eslint/eslint-plugin": "~13.0.1",
+    "@angular-eslint/eslint-plugin-template": "~13.0.1",
+    "@angular-eslint/template-parser": "~13.0.1",
+    "@angular/cli": "~13.2.0",
+    "@angular/compiler-cli": "~13.2.0",
+    "@angular/language-service": "~13.2.0",
     "@nestjs/schematics": "~8.0.8",
     "@nestjs/testing": "~8.4.0",
+    "@nrwl/angular": "13.8.8",
     "@nrwl/cli": "13.8.8",
     "@nrwl/eslint-plugin-nx": "13.8.8",
     "@nrwl/jest": "13.8.8",
@@ -55,6 +73,7 @@
     "eslint": "~8.11.0",
     "eslint-config-prettier": "8.5.0",
     "jest": "27.5.1",
+    "jest-preset-angular": "11.1.1",
     "prettier": "~2.5.1",
     "ts-jest": "27.1.3",
     "typescript": "~4.5.2"
