--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
-    "build": "nx build",
-    "test": "nx test",
-    "postinstall": "ngcc --properties es2015 browser module main"
+    "postinstall": "ngcc --properties es2015 browser module main",
+    "gen:api": "nswag run"
   },
   "private": true,
   "dependencies": {
@@ -74,6 +73,12 @@
     "eslint-config-prettier": "8.5.0",
     "jest": "27.5.1",
     "jest-preset-angular": "11.1.1",
+    "ng-packagr": "^13.0.0",
+    "nswag": "13.15.10",
+    "postcss": "^8.4.5",
+    "postcss-import": "^14.0.2",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-url": "^10.1.1",
     "prettier": "~2.5.1",
     "ts-jest": "27.1.3",
     "typescript": "~4.5.2"
