--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -60,7 +60,12 @@
       "@nx-post-vscode/api/shared-utils-decorators": [
         "libs/api/shared-utils-decorators/src/index.ts"
       ],
-      "@nx-post-vscode/api/utils-config": ["libs/api/utils-config/src/index.ts"]
+      "@nx-post-vscode/api/utils-config": [
+        "libs/api/utils-config/src/index.ts"
+      ],
+      "@nx-post-vscode/web/shared-data-access-api-sdk": [
+        "libs/web/shared-data-access-api-sdk/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
