--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.0",
-    "@angular/common": "~13.2.0",
-    "@angular/compiler": "~13.2.0",
-    "@angular/core": "~13.2.0",
-    "@angular/forms": "~13.2.0",
-    "@angular/platform-browser": "~13.2.0",
-    "@angular/platform-browser-dynamic": "~13.2.0",
-    "@angular/router": "~13.2.0",
+    "@angular/animations": "~13.2.6",
+    "@angular/common": "~13.2.6",
+    "@angular/compiler": "~13.2.6",
+    "@angular/core": "~13.2.6",
+    "@angular/forms": "~13.2.6",
+    "@angular/platform-browser": "~13.2.6",
+    "@angular/platform-browser-dynamic": "~13.2.6",
+    "@angular/router": "~13.2.6",
     "@automapper/classes": "7.3.14",
     "@automapper/core": "7.3.14",
     "@automapper/mikro": "7.3.14",
     "@automapper/nestjs": "7.3.14",
-    "@mikro-orm/core": "5.0.5",
-    "@mikro-orm/mongodb": "5.0.5",
+    "@mikro-orm/core": "5.1.0",
+    "@mikro-orm/mongodb": "5.1.0",
     "@mikro-orm/nestjs": "5.0.1",
-    "@nestjs/common": "~8.4.0",
+    "@nestjs/common": "~8.4.1",
     "@nestjs/config": "1.2.0",
-    "@nestjs/core": "~8.4.0",
+    "@nestjs/core": "~8.4.1",
     "@nestjs/jwt": "8.0.0",
     "@nestjs/passport": "8.2.1",
-    "@nestjs/platform-express": "~8.4.0",
+    "@nestjs/platform-express": "~8.4.1",
     "@nestjs/swagger": "5.2.0",
     "bcrypt": "5.0.1",
     "compression": "1.7.4",
@@ -40,18 +40,18 @@
     "rxjs": "~7.5.5",
     "swagger-ui-express": "4.3.0",
     "tslib": "~2.3.1",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.0",
-    "@angular-eslint/eslint-plugin": "~13.0.1",
-    "@angular-eslint/eslint-plugin-template": "~13.0.1",
-    "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.2.0",
-    "@angular/compiler-cli": "~13.2.0",
-    "@angular/language-service": "~13.2.0",
+    "@angular-devkit/build-angular": "~13.2.6",
+    "@angular-eslint/eslint-plugin": "~13.1.0",
+    "@angular-eslint/eslint-plugin-template": "~13.1.0",
+    "@angular-eslint/template-parser": "~13.1.0",
+    "@angular/cli": "~13.2.6",
+    "@angular/compiler-cli": "~13.2.6",
+    "@angular/language-service": "~13.2.6",
     "@nestjs/schematics": "~8.0.8",
-    "@nestjs/testing": "~8.4.0",
+    "@nestjs/testing": "~8.4.1",
     "@nrwl/angular": "13.8.8",
     "@nrwl/cli": "13.8.8",
     "@nrwl/eslint-plugin-nx": "13.8.8",
@@ -73,12 +73,12 @@
     "eslint-config-prettier": "8.5.0",
     "jest": "27.5.1",
     "jest-preset-angular": "11.1.1",
-    "ng-packagr": "^13.0.0",
+    "ng-packagr": "~13.2.1",
     "nswag": "13.15.10",
-    "postcss": "^8.4.5",
-    "postcss-import": "^14.0.2",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-url": "^10.1.1",
+    "postcss": "~8.4.8",
+    "postcss-import": "~14.0.2",
+    "postcss-preset-env": "~7.4.2",
+    "postcss-url": "~10.1.3",
     "prettier": "~2.5.1",
     "ts-jest": "27.1.3",
     "typescript": "~4.5.2"
