--- a/libs/api/data-access-security/project.json
+++ b/libs/api/data-access-security/project.json
@@ -4,30 +4,44 @@
   "targets": {
     "build": {
       "executor": "@nrwl/js:tsc",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/libs/api/data-access-security",
         "tsConfig": "libs/api/data-access-security/tsconfig.lib.json",
         "packageJson": "libs/api/data-access-security/package.json",
         "main": "libs/api/data-access-security/src/index.ts",
-        "assets": ["libs/api/data-access-security/*.md"]
+        "assets": [
+          "libs/api/data-access-security/*.md"
+        ]
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["libs/api/data-access-security/**/*.ts"]
+        "lintFilePatterns": [
+          "libs/api/data-access-security/**/*.ts"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/api/data-access-security"],
+      "outputs": [
+        "coverage/libs/api/data-access-security"
+      ],
       "options": {
         "jestConfig": "libs/api/data-access-security/jest.config.js",
         "passWithNoTests": true
       }
     }
   },
-  "tags": ["scope:api", "type:data-access", "context:security"]
+  "tags": [
+    "scope:api",
+    "type:data-access",
+    "context:security"
+  ]
 }
