--- a/libs/api/feature-comment/project.json
+++ b/libs/api/feature-comment/project.json
@@ -5,30 +5,44 @@
   "targets": {
     "build": {
       "executor": "@nrwl/js:tsc",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/libs/api/feature-comment",
         "tsConfig": "libs/api/feature-comment/tsconfig.lib.json",
         "packageJson": "libs/api/feature-comment/package.json",
         "main": "libs/api/feature-comment/src/index.ts",
-        "assets": ["libs/api/feature-comment/*.md"]
+        "assets": [
+          "libs/api/feature-comment/*.md"
+        ]
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["libs/api/feature-comment/**/*.ts"]
+        "lintFilePatterns": [
+          "libs/api/feature-comment/**/*.ts"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/api/feature-comment"],
+      "outputs": [
+        "coverage/libs/api/feature-comment"
+      ],
       "options": {
         "jestConfig": "libs/api/feature-comment/jest.config.js",
         "passWithNoTests": true
       }
     }
   },
-  "tags": ["scope:api", "type:feature", "context:comment"]
+  "tags": [
+    "scope:api",
+    "type:feature",
+    "context:comment"
+  ]
 }
