--- a/libs/api/utils-config/project.json
+++ b/libs/api/utils-config/project.json
@@ -5,30 +5,44 @@
   "targets": {
     "build": {
       "executor": "@nrwl/js:tsc",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/libs/api/utils-config",
         "tsConfig": "libs/api/utils-config/tsconfig.lib.json",
         "packageJson": "libs/api/utils-config/package.json",
         "main": "libs/api/utils-config/src/index.ts",
-        "assets": ["libs/api/utils-config/*.md"]
+        "assets": [
+          "libs/api/utils-config/*.md"
+        ]
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["libs/api/utils-config/**/*.ts"]
+        "lintFilePatterns": [
+          "libs/api/utils-config/**/*.ts"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/api/utils-config"],
+      "outputs": [
+        "coverage/libs/api/utils-config"
+      ],
       "options": {
         "jestConfig": "libs/api/utils-config/jest.config.js",
         "passWithNoTests": true
       }
     }
   },
-  "tags": ["scope:api", "type:utils", "context:config"]
+  "tags": [
+    "scope:api",
+    "type:utils",
+    "context:config"
+  ]
 }
