--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/passport-jwt": "3.0.6",
     "@typescript-eslint/eslint-plugin": "~5.14.0",
     "@typescript-eslint/parser": "~5.14.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "~8.11.0",
     "eslint-config-prettier": "8.5.0",
     "jest": "27.5.1",
@@ -82,6 +83,7 @@
     "postcss-preset-env": "~7.4.2",
     "postcss-url": "~10.1.3",
     "prettier": "~2.5.1",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "27.1.3",
     "typescript": "~4.5.2"
   }
