chore: update packages

--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@angular/platform-browser": "~13.2.6",
     "@angular/platform-browser-dynamic": "~13.2.6",
     "@angular/router": "~13.2.6",
-    "@automapper/classes": "7.3.14",
-    "@automapper/core": "7.3.14",
-    "@automapper/mikro": "7.3.14",
-    "@automapper/nestjs": "7.3.14",
+    "@automapper/classes": "~8.0.0-beta.4",
+    "@automapper/core": "~8.0.0-beta.4",
+    "@automapper/mikro": "~8.0.0-beta.4",
+    "@automapper/nestjs": "~8.0.0-beta.4",
     "@mikro-orm/core": "5.1.0",
     "@mikro-orm/mongodb": "5.1.0",
     "@mikro-orm/nestjs": "5.0.1",
